Fixed home landing page on mobile

--- a/index.css
+++ b/index.css
@@ -45,6 +45,8 @@
     --container-medium-width: 700px; 
     --container-small-width: 500px;
 
+    --container-small-height: 500px;
+
     --gutter-huge: 12rem;
     --gutter-medium: 6rem;
     --gutter-normal: 3rem;
@@ -380,6 +382,12 @@ body:not(.user-is-tabbing) a:focus {
     }
 }
 
+@media(max-height: 500px) {
+    .nav {
+        font-size: var(--font-size-small);
+    }
+}
+
 .nav__link {
     position: relative;
     display: inline-block;
@@ -419,6 +427,7 @@ body:not(.user-is-tabbing) a:focus {
   display: block;
   width: 100%; /* Full width */
   z-index: 5;
+  padding_bottom: 1rem;
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
 }
 
@@ -457,6 +466,29 @@ body:not(.user-is-tabbing) a:focus {
     .header__text p {
         transform: scale(.8);
     }
+}
+
+/* Hide short text by default (resolution > 1200px) */
+.short-text { display: none; }
+
+/* When resolution <= 1200px, hide full text and show short text */
+@media (max-width: 500px) {
+    .short-text { display: inline-block; }
+    .full-text { display: none; }
+} 
+
+.full-text {
+    width: 100px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+@media (max-height: 500px) {
+    .full-text {
+        width: 60px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+     }
 }
 
 /* --------------------------------------- */
